--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  max-width: 600px;
+  display: grid;
+  place-items: center;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -28,11 +31,7 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  text-align: left;
+  justify-self: start;
 }
